some minor appendix changes

--- a/massive_stars/manuscript/appendix_mesa_dedalus.tex
+++ b/massive_stars/manuscript/appendix_mesa_dedalus.tex
@@ -1,4 +1,4 @@
-\section{Comparison of MESA and Dedalus models}
+\section{From MESA to Dedalus}
 \label{app:mesa_dedalus}
 We read in a 40 $M_\odot$ ZAMS MESA stellar model (\texttt{LOGS/6.data} at \url{github.com/matteocantiello/MESA_Models_Dedalus_Full_Sphere}).
 From this model, we load the radial profiless of the mass $m$, radial coordinate $r$, density $\rho$, pressure $P$, temperature $T$, energy generation rate per unit mass $\epsilon$, opacity $\kappa$, logarithmic temperature gradlent $\nabla = d \ln T/d \ln P$, adiabatic temperature gradient $\gradad$, $\chi_{\rho} = (d\ln P /d\ln\rho)|_T$, $\chi_T = (d\ln P/d\ln T)|_{\rho}$, \brunt$\,$frequency $N^2$, specific heat at constant volume $c_V$ and pressure $c_P$, convective luminosity $L_{\rm{conv}}$, and square sound speed $c_s^2$.
