--- a/massive_stars/manuscript/biblio.bib
+++ b/massive_stars/manuscript/biblio.bib
@@ -1,3 +1,25 @@
+%equations
+@ARTICLE{vasil_etal_2013,
+       author = {{Vasil}, Geoffrey M. and {Lecoanet}, Daniel and {Brown}, Benjamin P. and {Wood}, Toby S. and {Zweibel}, Ellen G.},
+        title = "{Energy Conservation and Gravity Waves in Sound-proof Treatments of Stellar Interiors. II. Lagrangian Constrained Analysis}",
+      journal = {\apj},
+     keywords = {planets and satellites: atmospheres, stars: interiors, Sun: interior, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Earth and Planetary Astrophysics, Physics - Atmospheric and Oceanic Physics, Physics - Fluid Dynamics},
+         year = 2013,
+        month = aug,
+       volume = {773},
+       number = {2},
+          eid = {169},
+        pages = {169},
+          doi = {10.1088/0004-637X/773/2/169},
+archivePrefix = {arXiv},
+       eprint = {1303.0005},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2013ApJ...773..169V},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 %Observational connections - BH mass gap
 @ARTICLE{farmer_etal_2019,
        author = {{Farmer}, R. and {Renzo}, M. and {de Mink}, S.~E. and {Marchant}, P. and {Justham}, S.},
