--- a/massive_stars/manuscript/ms_MassiveStarWaves.tex
+++ b/massive_stars/manuscript/ms_MassiveStarWaves.tex
@@ -12,6 +12,10 @@
 \usepackage{xcolor}
 
 %%%% Custom commands
+\newcommand{\Lnd}{\ensuremath{L_{\mathrm{nd}}}}
+\newcommand{\Tnd}{\ensuremath{T_{\mathrm{nd}}}}
+\newcommand{\mnd}{\ensuremath{m_{\mathrm{nd}}}}
+\newcommand{\tnd}{\ensuremath{\tau_{\mathrm{nd}}}}
 \newcommand{\yL}{\ensuremath{\mathcal{Y}_{\rm{L}}}}
 \newcommand{\yS}{\ensuremath{\mathcal{Y}_{\rm{S}}}}
 \newcommand{\justgrad}{\ensuremath{\nabla}}
@@ -72,13 +76,15 @@
 \author[0000-0002-7635-9728]{Daniel Lecoanet}
 \affiliation{CIERA, Northwestern University, Evanston IL 60201, USA}
 \affiliation{Department of Engineering Sciences and Applied Mathematics, Northwestern University, Evanston IL 60208, USA}
+\author[0000-0003-4761-4766]{Keaton J. Burns}
+\affiliation{Massachusetts Institute of Technology Departments of Mathematics and Physics, Cambridge, Massachusetts 02139, USA}
 \author{Matteo Cantiello}
 \affiliation{Center for Computational Astrophysics, Flatiron Institute, New York, NY 10010, USA}
 \affiliation{Department of Astrophysical Sciences, Princeton University, Princeton, NJ 08544, USA}
+\author[0000-0001-5048-9973]{Adam S.~Jermyn}
+\affiliation{Center for Computational Astrophysics, Flatiron Institute, New York, NY 10010, USA}
 \author[0000-0001-8935-219X]{Benjamin P. Brown}
 \affiliation{University of Colorado Laboratory for Atmospheric and Space Physics and Department of Astrophysical and Planetary Sciences, Boulder, Colorado 80309, USA}
-\author[0000-0003-4761-4766]{Keaton J. Burns}
-\affiliation{Massachusetts Institute of Technology Departments of Mathematics and Physics, Cambridge, Massachusetts 02139, USA}
 \affiliation{Center for Computational Astrophysics, Flatiron Institute, New York, New York 10010, USA}
 \author[0000-0002-8902-5030]{Geoffrey M. Vasil}
 \affiliation{School of Mathematics and Statistics, University of Sydney, Sydney, New South Wales 2006, Australia}
