--- a/massive_stars/manuscript/appendix_transforms.tex
+++ b/massive_stars/manuscript/appendix_transforms.tex
@@ -1,22 +1,29 @@
 \section{Transforms and Spectra}
 \label{app:transforms}
 
-All wave flux and poer spectra presented in this work are calculated from long time series of data of our state variables projected onto a 2D sphere.
+All wave flux and power spectra in this work are calculated from long time series of data of our state variables projected onto a 2D sphere.
 Given a 3D data cube of a variable $a(t, \phi, \theta)$, we transform the data into frequency space as
 \begin{equation}
-a(t,\phi,\theta) \,\,\xrightarrow[\rm{SHT}]{}\,\,
-A(t,\ell,m) \,\,\xrightarrow[\rm{FT}]{}\,\,
-\hat{A}(f, \ell, m).
+    a(t,\phi,\theta) \,\,\xrightarrow[\rm{SHT}]{}\,\,
+    \hat{a}_{\ell,m}(t) \,\,\xrightarrow[\rm{FT}]{}\,\,
+    \hat{A}_{\ell,m}(f).
 \end{equation}
-To perform the spherical harmonic transform (SHT), we load the real grid-space data into a Dedalus \texttt{field} object, then convert the field to coefficient space.
-Dedalus coefficient data must be divided by $\sqrt{2}$ at $\ell = 0$ data and $2$ for $\ell > 0$.
-This returns two real values $b_1$ and $b_2$ for each ($\ell$, $m$) pair, and $A(t, \ell, m) = b_1 + \hat{j} b_2$ (where $\hat{j} = \sqrt{-1}$).
-To perform the Fourier Transform (FT), we first measure the total number of temporal data points in the sample $N$ and retrieve the Hanning window $w$ of $N$ points with \texttt{numpy.hanning}.
-We then use the \texttt{numpy.fft.fft} to transform the product of $w$ and $A(t, \ell, m)$, and normalize the output by $\sqrt{8/3}/N$ to retrieve $\hat{A}(f, \ell, m)$.
-To obtain the frequencies, we use \texttt{numpy.fft.fftfreq} with $N$ data points and provide it the time step between each output in our data series.
+We perform the spherical harmonic transform (SHT) using Dedalus.
+Dedalus returns two coefficient amplitudes, $b_1$ and $b_2$, corresponding to the $\cos (m\phi)$ and $-\sin(m\phi)$ components.
+From these, we construct the spherical harmonic amplitude $\hat{a}_{\ell,m}(t) = b_1 + i b_2$.
+
+%Verify from documentation https://numpy.org/doc/stable/reference/routines.fft.html#module-numpy.fft
+We calculate the Discrete Fourier Transform using NumPy and define its normalization such that
+\begin{equation}
+    \hat{A}_{\ell,m, f} = \frac{1}{N}\sqrt{\frac{8}{3}}\sum_{j=0}^{N-1} H_N(j)\hat{a}_{\ell,m}(t_j) \mathrm{exp}\left\{-2\pi i \frac{j f}{N}\right\}
+\end{equation}
+In this definition, $H_N(j)$ is the $j$th point of the Hanning window defined over $N$ total data points, and the factor of $\sqrt{8/3}$ accounts for this window.
 
 To calculate a power-like quantity (power spectrum, wave flux spectrum), we multiply one transformed field with the complex conjugate of another, e.g., $P_A(f) = \hat{A}^* \hat{A}$.
 To properly account for power in negative frequencies, we define $P_A(f) = P_A(f) + P_A(-f)$ for all $f \geq 0$.
 
 To calculate the wave flux, we output $p = \varpi - 0.5 |\vec{u}|^2$ and $u_r = \vec{u}\dot\hat{e}_r$.
 We take transforms per the above recipe and calculate the wave flux $W(f) = R^2\rho(R) \hat{P}^*\hat{U}_r$, where $R$ is the radial coordinate at which the shell is sampled.
+\todo{call it wave luminosity and add 4$\pi$}%
+
+%work on windowed FFTs to see convergence in time (of the peaks).
