--- a/massive_stars/manuscript/appendix_mesa_dedalus.tex
+++ b/massive_stars/manuscript/appendix_mesa_dedalus.tex
@@ -1,26 +1,40 @@
 \section{From MESA to Dedalus}
 \label{app:mesa_dedalus}
-We read in a 40 $M_\odot$ ZAMS MESA stellar model (\texttt{LOGS/6.data} at \url{github.com/matteocantiello/MESA_Models_Dedalus_Full_Sphere}).
-From this model, we load the radial profiless of the mass $m$, radial coordinate $r$, density $\rho$, pressure $P$, temperature $T$, energy generation rate per unit mass $\epsilon$, opacity $\kappa$, logarithmic temperature gradlent $\nabla = d \ln T/d \ln P$, adiabatic temperature gradient $\gradad$, $\chi_{\rho} = (d\ln P /d\ln\rho)|_T$, $\chi_T = (d\ln P/d\ln T)|_{\rho}$, \brunt$\,$frequency $N^2$, specific heat at constant volume $c_V$ and pressure $c_P$, convective luminosity $L_{\rm{conv}}$, and square sound speed $c_s^2$.
-From these quantities, we calculate the radiative diffusivity,
+We use a 15 $M_\odot$ ZAMS MESA stellar model to construct our background stratification.
+From this model, we load the radial profiless of the mass $m$, radial coordinate $r$, density $\rho$, pressure $P$, temperature $T$, energy generation rate per unit mass $\epsilon$, opacity $\kappa$, logarithmic temperature gradlent $\nabla = d \ln T/d \ln P$, adiabatic temperature gradient $\gradad$, $\chi_{\rho} = (d\ln P /d\ln\rho)|_T$, $\chi_T = (d\ln P/d\ln T)|_{\rho}$, \brunt$\,$frequency $N^2$, specific heat at constant pressure $c_P$, luminosity $L_*$, convective luminosity fraction $f_L = L_{\rm{conv}}/L_*$, and sound speed $c_s$.
+We secondarily calculate
+\begin{align}
+    &\frac{d\ln P}{dr} = -\frac{\rho g}{P},\\
+    &\frac{d\ln \rho}{dr} = \frac{d\ln P}{dr}\frac{\chi_T}{\chi_\rho}\left(\gradad - \justgrad\right) - \frac{g}{c_s^2},\\
+    &\frac{d\ln T}{dr} =  \frac{d\ln P}{dr}\justgrad,
+\end{align}
+and we define $L_{\rm{conv}} = L_* f_L$ and $dT/dr = T d\ln T/dr$ and gravitational acceleration $g = G m / r^2$ and specific entropy gradient $ds/dr = c_P N^2 / g$.
+We calculate the radiative conductivity,
 \begin{equation}
-\chi_{\rm{rad}} = \frac{16 \sigma_{\rm{SB}} T^3}{3 \rho^2 c_P \kappa},
+    k_{\rm{rad}} \equiv \frac{16 \sigma_{\rm{SB}} T^3}{3 \rho \kappa} 
+    = \frac{L_*  - L_{\rm{conv}}}{4\pi r^2 dT/dr},
 \end{equation}
-the gravitational acceleration $g = G m / r^2$, the logarithmic pressure derivative $d\ln P/dr = - \rho g /P$, the logarithmic density gradient $(d\ln\rho/dr = d\ln P/dr)(\chi_T/\chi_{\rho})(\gradad - \justgrad) - g/c_s^2$, and the logarithmic temperature gradient $d\ln T/dr = (d\ln P/dr)\justgrad$.
-The heating profile is found from the convective velocity $H = \hat{e}_r\dot\grad L_{\rm{conv}} / (4\pi r^2)$.
-We nondimensionalize the length $L$ on the radius of the core convection zone; the density, temperature, heating, and specific heat at constant pressure are nondimensionalized at their core values $\rho_c = \rho(r=0)$ and $T_c = T(r=0)$, $H_c = H(r=0)$, $c_{P,c} = c_P(r=0)$; the timescale is then set to be the core heating timescale $\tau_H = (H_c / L^2 / \rho_c)^{-1/3}$ and the nondimensiona velocity is $u_H = L / \tau_H$.
+where we use the second definition because it produces a smoother profile.
+We define the heating function 
+\begin{equation}
+    \begin{split}
+        \mathcal{H} &= \rho \epsilon - \frac{1}{4\pi r^2}\frac{d}{dr}\left(-4\pi r^2 k_{\rm{rad}}\frac{dT}{dr}\right)\\
+        &=\frac{1}{4\pi r^2}\left[\frac{d L_*}{dr} - \frac{d}{dr}\left(-4 \pi r^2 k_{\rm{rad}}\frac{dT}{dr}\right)\right]
+    \end{split}
+\end{equation}
+We find that the second equality produces a smoother profile than the first quantity, but use the first quantity (with $\rho \epsilon$) for the innermost radial points where the numerical derivative of $L_*$ is less well-defined.
+We nondimensionalize using $\Lnd = 8.21 \times 10^{10}$ cm, $\Tnd = 3.63 \times 10^7$ K, $\mnd = 4.30 \times 10^{33}$ g, and $\tnd = 4.66 \times 10^{5}$ s.
 
-Given this nondimensionalization and these MESA profiles, we compute the following nonconstant coefficients for our Dedalus model:
+Given this nondimensionalization and these MESA profiles, we control the turbulence and resolution requirement of a simulation by specifying a nondimensional viscosity $\nu_{\rm{nd}}$
+We then compute the following nondimensional radial profiles:
 \begin{enumerate}
-\item $\rm{Pe}^{-1} = \chi_{\rm{rad}} / (u_H L)$. When $\rm{Pe}^{-1} < \rm{Re}^{-1}$, a constant, we set $\rm{Pe}^{-1} = \rm{Re}^{-1}$.
-\item $\justgrad\rm{Pe}^{-1}$ is computed as the gradient of $\rm{Pe}^{-1}$.
-\item $\ln\rho$ is set to be $\ln(\rho / \rho_c)$.
-\item $\ln T$ is set to be $\ln(T / T_c)$.
-\item $T$ is set to be $T/T_c$.
-\item $\grad T$ is set to be $(T/T_c)\,L\,d\ln T/dr$.
-\item $\mathcal{H} = (H/H_c)\, \rho_c T_C / (\rho T)$.
-\item $\justgrad s_0 = c_P N^2 / g (L/s_c)$
-\todo{write down what $s_c$ is}
+    \item $\chi_{\rm{nd}} = (k_{\rm{rad}}/[\rho c_P])(\tnd/\Lnd^2)$. When $\chi_{\rm{nd}} < \nu_{\rm{nd}}$, we set $\chi_{\rm{nd}} = \nu_{\rm{nd}}$.
+    \item $\ln\rho$ is set to be $\ln[\rho (\Lnd^3/\mnd)]$.
+    \item $\ln T$ is set to be $\ln(T / \Tnd)$.
+    \item $T$ is set to be $T/\Tnd$.
+    \item $\grad T$ is set to be $(d\ln T/dr)(\Lnd/\Tnd)$.
+    \item $\tilde{\mathcal{H}} = (H/[\rho T]) (\Tnd\tnd^3/\Lnd^2)$.
+    \item $\justgrad s_0 = (ds/dr) (\Tnd\tnd^2/\Lnd)$
 \end{enumerate}
 
 Some fields with particularly sharp transitions (e.g., $\grad s_0$, $\mathcal{H}$) require additional smoothing.
