starts outlining paper again!

--- a/manuscripts/massive_star_waves/biblio.bib
+++ b/manuscripts/massive_star_waves/biblio.bib
@@ -1582,3 +1582,99 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{lancaster_etal_2021,
+       author = {{Lancaster}, Lachlan and {Ostriker}, Eve C. and {Kim}, Jeong-Gyu and {Kim}, Chang-Goo},
+        title = "{Efficiently Cooled Stellar Wind Bubbles in Turbulent Clouds. I. Fractal Theory and Application to Star-forming Clouds}",
+      journal = {\apj},
+     keywords = {Star formation, Stellar wind bubbles, Stellar winds, Molecular clouds, Star clusters, Young star clusters, 1569, 1635, 1636, 1072, 1567, 1833, Astrophysics - Astrophysics of Galaxies},
+         year = 2021,
+        month = jun,
+       volume = {914},
+       number = {2},
+          eid = {89},
+        pages = {89},
+          doi = {10.3847/1538-4357/abf8ab},
+archivePrefix = {arXiv},
+       eprint = {2104.07691},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021ApJ...914...89L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{bromm_larson_2004,
+author = {Bromm, Volker and Larson, Richard B.},
+title = {The First Stars},
+journal = {Annual Review of Astronomy and Astrophysics},
+volume = {42},
+number = {1},
+pages = {79-118},
+year = {2004},
+doi = {10.1146/annurev.astro.42.053102.134034},
+
+URL = {
+        https://doi.org/10.1146/annurev.astro.42.053102.134034
+
+},
+eprint = {
+        https://doi.org/10.1146/annurev.astro.42.053102.134034
+
+}
+,
+    abstract = { ▪ Abstract We review recent theoretical results on the formation of the first stars in the universe, and emphasize related open questions. In particular, we discuss the initial conditions for Population III star formation, as given by variants of the cold dark matter cosmology. Numerical simulations have investigated the collapse and the fragmentation of metal-free gas, showing that the first stars were predominantly very massive. The exact determination of the stellar masses, and the precise form of the primordial initial mass function, is still hampered by our limited understanding of the accretion physics and the protostellar feedback effects. We address the importance of heavy elements in bringing about the transition from an early star formation mode dominated by massive stars to the familiar mode dominated by low-mass stars at later times. We show how complementary observations, both at high redshifts and in our local cosmic neighborhood, can be utilized to probe the first epoch of star formation. }
+}
+
+@ARTICLE{heger_2003,
+       author = {{Heger}, A. and {Fryer}, C.~L. and {Woosley}, S.~E. and {Langer}, N. and {Hartmann}, D.~H.},
+        title = "{How Massive Single Stars End Their Life}",
+      journal = {\apj},
+     keywords = {Black Hole Physics, Gamma Rays: Bursts, Stars: Early-Type, Stars: Neutron, Stars: Supernovae: General, Astrophysics},
+         year = 2003,
+        month = jul,
+       volume = {591},
+       number = {1},
+        pages = {288-300},
+          doi = {10.1086/375341},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0212469},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2003ApJ...591..288H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{abbott_etal_2018,
+       author = {{Abbott}, B.~P. and {Abbott}, R. and {Abbott}, T.~D. and {Abernathy}, M.~R. and {Acernese}, F. and {Ackley}, K. and {Adams}, C.},
+        title = "{Prospects for observing and localizing gravitational-wave transients with Advanced LIGO, Advanced Virgo and KAGRA}",
+      journal = {LRR},
+     keywords = {Gravitational waves, Gravitational-wave detectors, Electromagnetic counterparts, Data analysis, General Relativity and Quantum Cosmology, Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2018,
+        month = apr,
+       volume = {21},
+       number = {1},
+          eid = {3},
+        pages = {3},
+          doi = {10.1007/s41114-018-0012-9},
+archivePrefix = {arXiv},
+       eprint = {1304.0670},
+ primaryClass = {gr-qc},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018LRR....21....3A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{farmer_etal_2016,
+       author = {{Farmer}, R. and {Fields}, C.~E. and {Petermann}, I. and {Dessart}, Luc and {Cantiello}, M. and {Paxton}, B. and {Timmes}, F.~X.},
+        title = "{On Variations Of Pre-supernova Model Properties}",
+      journal = {\apjs},
+     keywords = {stars: abundances, stars: evolution, stars: interiors, supernovae: general, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2016,
+        month = dec,
+       volume = {227},
+       number = {2},
+          eid = {22},
+        pages = {22},
+          doi = {10.3847/1538-4365/227/2/22},
+archivePrefix = {arXiv},
+       eprint = {1611.01207},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016ApJS..227...22F},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
