--- a/manuscripts/massive_star_waves/intro.tex
+++ b/manuscripts/massive_star_waves/intro.tex
@@ -1,11 +1,19 @@
 \section{Introduction}
 \label{sec:introduction}
 
-Here's what Evan needs to do:
+Massive stars are the cornerstone of many fields of astrophysics.
+The ionizing radiation emitted at the surfaces of these stars serves as an important feedback mechanism which regulates star formation and the ISM structure \citep{lancaster_etal_2021}, and this radiation was important in the reionization of the early universe \citep{bromm_larson_2004}.
+Massive stars end their lives in dynamic explosions which produce supernovae and observable high-energy transients \citep{heger_2003}.
+These explosions produce compact remnants such as black holes and neutron stars and ground-based gravitational wave interferometers like LIGO have recently begun to probe the mass distribution of these objects \citep{abbott_etal_2018}.
+The complex evolutionary history of massive stars determines what type of explosion these stars end their lives in and what type of remnant they leave behind \citep{farmer_etal_2016}.
+A detailed understanding of the internal structure and evolution of massive stars is therefore desired.
+
 
 \begin{enumerate}
-\item Get all of the damping layer simulations run.
-\item Get a really long simulation run without a damping layer.
-\item Do the transfer function derivation again.
-\item Make figures and write out the story!
+\item Our best tool for probing the insides of massive stars is Asteroseismology.
+    This is going really well for SPB and $\gamma$ Dor stars.
+\item Recently, stochastic low-frequency variability has been seen on even hotter, more massive stars, and there is a current debate about whether that signal is gravity waves driven by core convection or something else.
+\item In order to resolve this debate, and to compare simulations of waves in massive stars to observations of massive stars, a framework is required for computing the spectra that would be observed at the surface of theoretical ``stars'' given the flow fields in simulations.
+\item In this paper, we build upon the framework laid out in \citet{lecoanet_etal_2019,lecoanet_etal_2021}. 
+    We demonstrate that the surface signal of linear waves can be predicted given the linear eigenvalues and a power-law description of the wave luminosity produced by the convection.
 \end{enumerate}
