--- a/manuscripts/massive_star_waves/music.tex
+++ b/manuscripts/massive_star_waves/music.tex
@@ -1,3 +1,15 @@
 \section{Graivity waves in the terminology of sound waves}
 \label{sec:music}
 
+\begin{enumerate}
+\item Sound waves and gravity waves aren't \emph{that} different.
+\item Humans are much more familiar with music (sound waves) than internal gravity waves, so we will appeal to that intuition to intuitively describe our approach.
+\item In a star, flows in the core convection zone excite gravity waves in the radiative envelope just like a band playing musical instrument excites sound waves in the room.
+\item If we want to know exactly what those musicians sound like, we need a room with idealized acoustices -- a recording studio. Recording studios have padded walls, so sound waves emanate from the musicians, and then are damped at the walls so they do not reflect and interfere.
+\item We do not observe the pure signal of waves excited by the convection, but rather waves which propagate through the stellar envelope and reflect off of the surface and later the convection zone, establishing standing waves.
+\item This is analogous to seeing your favorite band live in a venue with ``bad'' acoustics. Rooms have specific length scales and dimensions and therefore certain sound waves resonate in those spaces. Power is placed in these resonant modes over time and bam you get a very different sound.
+\item If you want to simulate how a band will sound in a given venue, you need two pieces: (1) the pure sound of the band and (2) enough information about the venue to determine which wave modes are resonant. You can test out a theory from this information by measuring the band in the studio, measuring the band in the venue, then comparing the two tracks.
+\item Similarly, if you want to simulate how gravity waves will affect the luminosity at the surface of a star, you need (1) the pure signal of the convection and (2) information about the eigenfunctions and eigenfrequencies of gravity waves in the stellar envelope. Then you can compare simulations to asteroseismic observations to see if the model matches or if pieces are missing.
+\item Our goal in this paper is to understand the pure signal of convection and also to develop and test a model of gravity waves in the radiative envelope of a massive star.
+\end{enumerate}
+
