--- a/manuscripts/massive_star_waves/transfer_extrapolation.tex
+++ b/manuscripts/massive_star_waves/transfer_extrapolation.tex
@@ -5,4 +5,4 @@ This is where we say, based on the last section, the bar filter does a pretty go
 So, let's now see what happens if we use a stadium filter instead of a bar filter (whole star instead of sim).
 We obviously can't actually simulate a whole star, but our hope is that this gives us an idea of what gravity waves would look like on stars in gyre.
 
-
+TODO find an actual star to compare to by including Matteo.
