--- a/manuscripts/massive_star_waves/ms_MassiveStarWaves.tex
+++ b/manuscripts/massive_star_waves/ms_MassiveStarWaves.tex
@@ -81,6 +81,9 @@
 \author{Matteo Cantiello}
 \affiliation{Center for Computational Astrophysics, Flatiron Institute, New York, NY 10010, USA}
 \affiliation{Department of Astrophysical Sciences, Princeton University, Princeton, NJ 08544, USA}
+\author{Benjamin Hyatt}
+\affiliation{CIERA, Northwestern University, Evanston IL 60201, USA}
+\affiliation{Department of Engineering Sciences and Applied Mathematics, Northwestern University, Evanston IL 60208, USA}
 \author[0000-0001-5048-9973]{Adam S.~Jermyn}
 \affiliation{Center for Computational Astrophysics, Flatiron Institute, New York, NY 10010, USA}
 \author[0000-0001-8935-219X]{Benjamin P. Brown}
