--- a/manuscripts/massive_star_waves/results_damping.tex
+++ b/manuscripts/massive_star_waves/results_damping.tex
@@ -1,12 +1,10 @@
 \section{Results of simulations with damping layers}
 \label{sec:results_damping}
 
-This is the ``recording studio'' section -- it's useful to report the amplitude here because the theory doesn't give that.
-
-We should run simulations as turbulent as possible here.
-Hopefully more turbulnce doesn't change the result.
-We will ignore the low-resolution laminar runs.
-
-We report that we see powerlaw wave fluxes at all turbulence values, and no scaling with turbulence (hopefully).
-
-
+\begin{enumerate}
+\item Show or refer to a picture of a simulation where the waves are obviously damped in the outer layer.
+\item Discuss that these simulations are in the traveling wave regime so we can get properties of the waves as they are generated and propagate outwards with little reflection.
+\item Show that the wave luminosity is constant with radius in the star, and demonstrate that this is expected from the linear eigenfunctions.
+\item Show that the wave luminosity is fairly constant with increasing Reynolds number, so our answer is a good approximation for actual stars.
+\item Show that the wave luminosity can be well-described by a power law. Report that power law in dimensional units. Compare to literature values.
+\end{enumerate}
