--- a/manuscripts/massive_star_waves/transfer_verification.tex
+++ b/manuscripts/massive_star_waves/transfer_verification.tex
@@ -3,8 +3,6 @@
 
 This is the section where we open Garage Band and put our bar filter on the recordings we took earlier.
 We see if the filter actually reproduces the resonances of the bar, etc.
-
-Need to check through the transfer function derivation and theory here carefully. 
-It may be useful to include Kyle here?
+It's unclear if this should be its own section; perhaps it should be wrapped up in the previous section or as a subsection there?
 
 
